--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 
 		<mule.version>3.9.0</mule.version>
     	<mule.tools.version>1.2</mule.tools.version>
+    	<derby.version>10.14.1.0</derby.version>
+    	<activemq.version>5.15.2</activemq.version>
 	</properties>
 
 	<build>
@@ -145,7 +147,7 @@
     <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derby</artifactId>
-            <version>10.14.1.0</version>
+            <version>${derby.version}</version>
         </dependency>
     <dependency>
             <groupId>org.mule.transports</groupId>
@@ -156,12 +158,12 @@
     <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-broker</artifactId>
-            <version>5.15.2</version>
+            <version>${activemq.version}</version>
         </dependency>
     <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-kahadb-store</artifactId>
-            <version>5.15.2</version>
+            <version>${activemq.version}</version>
         </dependency>
     </dependencies>
 
